--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "formidable": "^3.5.1",
+    "minio": "^7.1.3",
+    "nanoid": "^5.0.4",
     "next": "^14.0.4",
+    "next-connect": "^1.0.0-next.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
-    "@types/node": "^18.17.0",
+    "@types/formidable": "^3.4.5",
+    "@types/node": "^18.19.6",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
