update docker compose, add db push to sh file

--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     depends_on:
       - db
       - minio
+    command: sh ./compose/db-push-and-start.sh
   db:
     image: postgres:15.3
     container_name: postgres
