--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -15,9 +15,10 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/myapp-db?schema=public
       # Be sure kubernetes.docker.internal is added to your hosts file
-      # S3 endpoint might be "minio" but in this case you should add the following to your hosts file:
+      # S3 endpoint might be "minio" but in this case in order to use presigned URLs
+      # you should add the following to your hosts file:
       # 127.0.0.1 minio
-      # Or use the IP address of your physical machine, localhost will not work
+      # Or use the IP address of your physical machine, localhost will not work for presigned URLs
       # https://stackoverflow.com/questions/24319662/from-inside-of-a-docker-container-how-do-i-connect-to-the-localhost-of-the-mach
       - S3_ENDPOINT=kubernetes.docker.internal
       - S3_PORT=9000
@@ -27,6 +28,7 @@ services:
     depends_on:
       - db
       - minio
+    # Optional, if you want to apply db schema from prisma to postgres
     command: sh ./compose/db-push-and-start.sh
   db:
     image: postgres:15.3
