update env example and readme

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,11 @@
 
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="postgresql://postgres:xxxxxxxx@xxxxxxxxx:5432/postgres?schema=public"
+
+
+S3_ENDPOINT="s3.amazonaws.com"
+S3_PORT="9000"
+S3_ACCESS_KEY=""
+S3_SECRET_KEY=""
+S3_BUCKET_NAME=""
